--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           source: ./
           destination: ./_site
+      - name: Rename API
+        run: |
+        mv ./_site/api/stats.html ./_site/api/stats.xml
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
 
